переподключил bootstrap стили и скрипты

--- a/KNDsalon/Views/Home/Index.cshtml
+++ b/KNDsalon/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Салон красоты KND</title>
     <link rel="stylesheet" href="~/css/home.css"> <!-- основной стиль -->
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="~/bootstrap-4.5.3-dist/css/bootstrap.min.css">
 </head>
 <body>
     <header>
@@ -272,11 +272,11 @@
                     <input type="datetime-local" name="DateTime_of_recording" class="form-control mb-2 mr-sm-2" style="border-radius: 90px;" placeholder="Время">
                 </div>
                 @*<div class="col-lg-4 col-sm-6">
-                    <input type="date" name="Data_of_recording" class="form-control mb-2 mr-sm-2" style="border-radius: 90px;" placeholder="Дата">
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <input type="time" name="Time_of_recording" class="form-control mb-2 mr-sm-2" style="border-radius: 90px;" placeholder="Время">
-                </div>*@
+                        <input type="date" name="Data_of_recording" class="form-control mb-2 mr-sm-2" style="border-radius: 90px;" placeholder="Дата">
+                    </div>
+                    <div class="col-lg-4 col-sm-6">
+                        <input type="time" name="Time_of_recording" class="form-control mb-2 mr-sm-2" style="border-radius: 90px;" placeholder="Время">
+                    </div>*@
                 <div class="col-lg-4 col-sm-12">
                     <button id="reg" type="submit" class="btn btn-sm">Записаться</button>
                 </div>
@@ -392,7 +392,7 @@
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="~/bootstrap-4.5.3-dist/js/bootstrap.min.js"></script>
 
     @* Скрипт для выбора услуг на основе мастера *@
     <script src="~/js/service.js"></script>
